删除多余代码，mongodb访问数据库，mqtt的两种方式

--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "babel-register": "^6.24.1",
     "bluebird": "^3.5.0",
     "cloudinary": "^1.8.0",
+    "express": "^4.17.1",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^2.0.1",
     "koa-router": "^7.1.1",
     "koa-session": "^5.0.0",
+    "koa-static": "^5.0.0",
+    "koa2-cors": "^2.0.6",
     "lodash": "^4.17.4",
     "mongoose": "^4.9.5",
     "qiniu": "^6.1.13",
     "sha1": "^1.1.1",
+    "socket.io": "^2.3.0",
     "speakeasy": "^2.0.0",
     "uuid": "^3.0.1",
     "xss": "^0.3.3"
